--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="game-container">
-        <div id="game-board"></div>
-        <button id="restart">Restart</button>
-    </div>
+    <h1>2048 Game</h1>
+    <div id="board"></div>
+    <h2>Score: <span id="score">0</span></h2>
+    <button onclick="restartGame()">Restart Game</button>
     <script src="script.js"></script>
 </body>
 </html>
