Added notes on the home page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>2048 Game</h1>
     <div id="board"></div>
     <h2>Score: <span id="score">0</span></h2>
-    <button onclick="restartGame()">Restart Game</button>
+    <p style="color:rgb(24, 69, 105);"><b>*Game still under construction* (Coffee break) *scroll down* 👇🏽</b></p>
+    <h3>Things still not added:</h3>
+    <p>Game over, mobile version, high score, save scores, animation</p>
     <script src="script.js"></script>
 </body>
 </html>
