added something to the note

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h2>Score: <span id="score">0</span></h2>
     <p style="color:rgb(24, 69, 105);"><b>*Game still under construction* (Coffee break) *scroll down* 👇🏽</b></p>
     <h3>Things still not added:</h3>
-    <p>Game over, mobile version, high score, save scores, animation</p>
+    <p>Game over, mobile version, high score, save scores, animation, also the scroll down is going to be removed it's here because of the <b>notes</b></p>
     <script src="script.js"></script>
 </body>
 </html>
