Added restart button, added gameover, *animation not done yet*

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <h1>2048 Game</h1>
     <div id="board"></div>
-    <h2>Score: <span id="score">0</span></h2>
+    <h2>Score: <span id="score">0</span>
+        Highscore: <span id="highscore">0</span>
+    </h2>
+    <button id="restart-button">Restart Game</button>
     <p style="color:rgb(24, 69, 105);"><b>*Game still under construction* (Coffee break) *scroll down* 👇🏽</b></p>
     <h3>Things still not added:</h3>
     <p>Game over, mobile version, high score, save scores, animation, also the scroll down is going to be removed it's here because of the <b>notes</b></p>
