--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <button id="restart-button">Restart Game</button>
     <p style="color:rgb(24, 69, 105);"><b>*Game still under construction* (Coffee break) *scroll down* 👇🏽</b></p>
     <h3>Things still not added:</h3>
-    <p>Game over, mobile version, high score, save scores, animation, also the scroll down is going to be removed it's here because of the <b>notes</b></p>
+    <p>animation, also the scroll down is going to be removed it's here because of the <b>notes</b></p>
     <script src="script.js"></script>
 </body>
 </html>
