--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
     <button id="restart-button">Restart Game</button>
     <p style="color:rgb(24, 69, 105);"><b>*Game still under construction* (Coffee break)🍵</b></p>
     <script src="script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.3/dist/confetti.browser.min.js"></script>
 </body>
 </html>
